# Finite-Difference-Method

./: .gitignore  CMakeLists.txt  README.md
FDML/: Finite Difference Method.sln  Finite Difference Method.vcxproj  Finite Difference Method.vcxproj.filters
FDML/src/cpp/: FDMEngine.cpp  stdafx.cpp
FDML/src/include/: FDMEngine.hpp
docs/: engines.drawio  mesh.drawio
examples/1dHeatRod/: 1dHeatRod.cpp  1dHeatRod.vcxproj  1dHeatRod.vcxproj.filters  stdafx.cpp
src/: Engine.cpp  Engine.hpp  Engine1D.cpp  Engine1D.hpp  Engine2D.cpp  Engine2D.hpp  FDMEngine.cpp  FDMEngine.hpp  Mesh.hpp  Mesh1D.hpp  Mesh2D.hpp
test/Tests/: Tests.vcxproj  test.cpp
