cmake_minimum_required(VERSION 3.10)
project(QODES)
set(CMAKE_CXX_STANDARD 20)
include_directories(src/)
set(SOURCES examples/1dHeatRod/1dHeatRod.cpp src/Engine1D.cpp src/Engine.cpp)
add_executable(FDM ${SOURCES})

if(MSVC)
    add_compile_options(/W4 /WX)
else()
    add_compile_options(-Wall -Wextra -pedantic -Werror)
endif()
